src/oci_lexer_parser/grammar/gen/DynamicGroupMatchingRuleParser.py
# Generated from DynamicGroupMatchingRule.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DynamicGroupMatchingRuleParser ( Parser ):

    grammarFileName = "DynamicGroupMatchingRule.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'!='", "'='", 
                     "'{'", "'}'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "ALL", "ANY", "NEQ", "EQ", "LBRACE", 
                      "RBRACE", "COMMA", "DOT", "STRING", "IDENT", "WS" ]

    RULE_matchingRule = 0
    RULE_groupOrList = 1
    RULE_group = 2
    RULE_elementList = 3
    RULE_element = 4
    RULE_dgMode = 5
    RULE_predicate = 6
    RULE_path = 7
    RULE_op = 8
    RULE_literal = 9

    ruleNames =  [ "matchingRule", "groupOrList", "group", "elementList", 
                   "element", "dgMode", "predicate", "path", "op", "literal" ]

    EOF = Token.EOF
    ALL=1
    ANY=2
    NEQ=3
    EQ=4
    LBRACE=5
    RBRACE=6
    COMMA=7
    DOT=8
    STRING=9
    IDENT=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MatchingRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def groupOrList(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.GroupOrListContext,0)


        def EOF(self):
            return self.getToken(DynamicGroupMatchingRuleParser.EOF, 0)

        def dgMode(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.DgModeContext,0)


        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_matchingRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatchingRule" ):
                listener.enterMatchingRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatchingRule" ):
                listener.exitMatchingRule(self)




    def matchingRule(self):

        localctx = DynamicGroupMatchingRuleParser.MatchingRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_matchingRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 20
                self.dgMode()


            self.state = 23
            self.groupOrList()
            self.state = 24
            self.match(DynamicGroupMatchingRuleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupOrListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def group(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.GroupContext,0)


        def elementList(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.ElementListContext,0)


        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_groupOrList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupOrList" ):
                listener.enterGroupOrList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupOrList" ):
                listener.exitGroupOrList(self)




    def groupOrList(self):

        localctx = DynamicGroupMatchingRuleParser.GroupOrListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_groupOrList)
        try:
            self.state = 28
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.group()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.elementList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(DynamicGroupMatchingRuleParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(DynamicGroupMatchingRuleParser.RBRACE, 0)

        def elementList(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.ElementListContext,0)


        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup" ):
                listener.enterGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup" ):
                listener.exitGroup(self)




    def group(self):

        localctx = DynamicGroupMatchingRuleParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(DynamicGroupMatchingRuleParser.LBRACE)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1062) != 0):
                self.state = 31
                self.elementList()


            self.state = 34
            self.match(DynamicGroupMatchingRuleParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DynamicGroupMatchingRuleParser.ElementContext)
            else:
                return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.ElementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DynamicGroupMatchingRuleParser.COMMA)
            else:
                return self.getToken(DynamicGroupMatchingRuleParser.COMMA, i)

        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_elementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementList" ):
                listener.enterElementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementList" ):
                listener.exitElementList(self)




    def elementList(self):

        localctx = DynamicGroupMatchingRuleParser.ElementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_elementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.element()
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 37
                    self.match(DynamicGroupMatchingRuleParser.COMMA)
                    self.state = 38
                    self.element() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 44
                self.match(DynamicGroupMatchingRuleParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def group(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.GroupContext,0)


        def dgMode(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.DgModeContext,0)


        def predicate(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.PredicateContext,0)


        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = DynamicGroupMatchingRuleParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1 or _la==2:
                    self.state = 47
                    self.dgMode()


                self.state = 50
                self.group()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.predicate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DgModeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL(self):
            return self.getToken(DynamicGroupMatchingRuleParser.ALL, 0)

        def ANY(self):
            return self.getToken(DynamicGroupMatchingRuleParser.ANY, 0)

        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_dgMode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDgMode" ):
                listener.enterDgMode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDgMode" ):
                listener.exitDgMode(self)




    def dgMode(self):

        localctx = DynamicGroupMatchingRuleParser.DgModeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dgMode)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.PathContext,0)


        def op(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.OpContext,0)


        def literal(self):
            return self.getTypedRuleContext(DynamicGroupMatchingRuleParser.LiteralContext,0)


        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = DynamicGroupMatchingRuleParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_predicate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.path()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==4:
                self.state = 57
                self.op()
                self.state = 58
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DynamicGroupMatchingRuleParser.IDENT)
            else:
                return self.getToken(DynamicGroupMatchingRuleParser.IDENT, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(DynamicGroupMatchingRuleParser.DOT)
            else:
                return self.getToken(DynamicGroupMatchingRuleParser.DOT, i)

        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = DynamicGroupMatchingRuleParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(DynamicGroupMatchingRuleParser.IDENT)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 63
                self.match(DynamicGroupMatchingRuleParser.DOT)
                self.state = 64
                self.match(DynamicGroupMatchingRuleParser.IDENT)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(DynamicGroupMatchingRuleParser.EQ, 0)

        def NEQ(self):
            return self.getToken(DynamicGroupMatchingRuleParser.NEQ, 0)

        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)




    def op(self):

        localctx = DynamicGroupMatchingRuleParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DynamicGroupMatchingRuleParser.STRING, 0)

        def getRuleIndex(self):
            return DynamicGroupMatchingRuleParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = DynamicGroupMatchingRuleParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(DynamicGroupMatchingRuleParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





